Fix CMake DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=156305

Reviewed by Daniel Bates.

.:

* Source/cmake/OptionsMac.cmake:

Source/WebKit:

* PlatformMac.cmake:

Source/WebKit/mac:

* WebKitPrefix.h:



Canonical link: https://commits.webkit.org/174382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199109 268f45cc-cd09-0410-ab3c-d52691b4dbfc